# LANCommander

./: .gitignore  .gitmodules  CONTRIBUTING.md  Directory.Build.props  Directory.Packages.props  LANCommander.UI\Components\MonacoCodeEditor\PowerShellCompletions.g.ts  LANCommander.csproj  LANCommander.db  LANCommander.db.bak  LANCommander.sln  LANCommander.slnx  LICENSE  Microsoft.Common.props  Program.cs  README.md  SECURITY.md  docker-compose.yml  setup-vendor.ps1  tsconfig.json
Controllers/: ArchivesController.cs  CompaniesController.cs  GamesController.cs  HomeController.cs  TagsController.cs  UploadController.cs
Data/: DatabaseContext.cs  LANCommander.db  LANCommander.db-shm  LANCommander.db-wal  Repository.cs  Settings.yml
Docker/: Dockerfile  Dockerfile.aarch64
Extensions/: StringExtensions.cs
LANCommander.AppHost/: AppHost.cs  LANCommander.AppHost.csproj  Program.cs
LANCommander.AutoUpdater/: LANCommander.AutoUpdater.csproj  Program.cs
LANCommander.Build/: Nightly.ps1
LANCommander.Client/: App.xaml  App.xaml.cs  BUILD.md  LANCommander.Client.csproj  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  Program.cs  _Imports.razor  nlog.config  package.json
LANCommander.Client.Data/: DatabaseContext.cs  LANCommander.Client.Data.csproj  Repository.cs
LANCommander.CompletionGenerator/: LANCommander.CompletionGenerator.csproj  Program.cs
LANCommander.Components/: LANCommander.Components.csproj  _Imports.razor
LANCommander.Documentation/: GettingStarted.md  Overview.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
LANCommander.Launcher.Avalonia/: App.axaml  App.axaml.cs  AssemblyInfo.cs  GlobalUsings.cs  LANCommander.Launcher.Avalonia.csproj  Program.cs  app.manifest
LANCommander.Launcher.Avalonia.IntegrationTests/: LANCommander.Launcher.Avalonia.IntegrationTests.csproj
LANCommander.Launcher.Avalonia.Tests/: AppSetup.cs  LANCommander.Launcher.Avalonia.Tests.csproj  TestApp.axaml  TestApp.axaml.cs
LANCommander.Launcher.CLI/: LANCommander.Launcher.CLI.csproj  Program.cs
LANCommander.Launcher.Data/: DatabaseContext.cs  GuidToNullConverter.cs  LANCommander.Launcher.Data.csproj  Repository.cs
LANCommander.Launcher.IntegrationTests/: LANCommander.Launcher.IntegrationTests.csproj
LANCommander.Launcher.Legacy/: .gitignore  CMakeLists.txt  build-win9x.sh
LANCommander.Launcher.Legacy/src/: launcher.rc  main.cpp
LANCommander.Launcher.Legacy/src/app/: app.cpp  app.h  download_queue.cpp  download_queue.h  game_database.cpp  game_database.h  logger.cpp  logger.h  settings.cpp  settings.h
LANCommander.Launcher.Legacy/src/ui/: gdi_font.cpp  gdi_font.h  image_cache.cpp  image_cache.h  image_decoder.cpp  image_decoder.h  input.cpp  input.h  screen_downloads.cpp  screen_downloads.h  screen_game_detail.cpp  screen_game_detail.h  screen_library.cpp  screen_library.h  screen_login.cpp  screen_login.h  screen_settings.cpp  screen_settings.h  theme.cpp  theme.h  widgets.cpp  widgets.h  window_chrome.cpp  window_chrome.h
LANCommander.Launcher.Models/: ActionSelectorDialogOptions.cs  CommandLineOptions.cs  ConnectionState.cs  DepotFilterModel.cs  DiscoveredServer.cs  DownloadQueueGame.cs  DownloadQueueRedistributable.cs  FilterModel.cs  IDownloadQueueItem.cs  IInstallQueueItem.cs  ImportItem.cs  ImportProgress.cs  ImportStatusUpdate.cs  InstallQueueGame.cs  InstallQueueTool.cs  LANCommander.Launcher.Models.csproj  LibraryFilterModel.cs  LibraryItem.cs  ListItem.cs  Settings.cs
LANCommander.Launcher.Services/: AuthenticationService.cs  CollectionService.cs  CommandLineService.cs  CompanyService.cs  DepotService.cs  DownloadService.cs  ElevatedScriptInterceptor.cs  EngineService.cs  ExternalScriptRunner.cs  FilterService.cs  GameService.cs  GenreService.cs  ImportManagerService.cs  ImportService.cs  InstallService.cs  KeepAliveService.cs  LANCommander.Launcher.Services.csproj  LibraryService.cs  LocalizationService.cs  MediaService.cs  MessageBusService.cs  MultiplayerModeService.cs  PlatformService.cs  PlaySessionService.cs  ProfileService.cs  RedistributableService.cs  (+9 more)
LANCommander.Launcher.Services.Tests/: LANCommander.Launcher.Services.Tests.csproj
LANCommander.SDK.Cpp/: .gitignore  CMakeLists.txt  README.md
LANCommander.SDK.Cpp/backends/curl/: curl_http_client.cpp  curl_http_client.h
LANCommander.SDK.Cpp/backends/wininet/: wininet_http_client.cpp  wininet_http_client.h
LANCommander.SDK.Cpp/docs/: API_REFERENCE.md  ARCHITECTURE.md  PLATFORM_NOTES.md
LANCommander.SDK.Cpp/include/lancommander/: lancommander.h  types.h
LANCommander.SDK.Cpp/include/lancommander/archive/: archive_extractor.h  crc32_util.h
LANCommander.SDK.Cpp/include/lancommander/clients/: authentication_client.h  beacon_client.h  connection_client.h  depot_client.h  game_client.h  issue_client.h  key_client.h  launcher_client.h  library_client.h  media_client.h  play_session_client.h  profile_client.h  redistributable_client.h  save_client.h  script_client.h  tool_client.h
LANCommander.SDK.Cpp/include/lancommander/http/: http_client.h  http_response.h
LANCommander.SDK.Cpp/include/lancommander/models/: archive.h  auth.h  collection.h  company.h  custom_field.h  depot.h  engine.h  error_response.h  external_id.h  game.h  genre.h  issue.h  key.h  library.h  lobby.h  media.h  multiplayer_mode.h  package.h  page.h  platform.h  play_session.h  profile.h  redistributable.h  save.h  script.h  server.h  server_detail.h  tag.h  tool.h  update_info.h
LANCommander.SDK.Cpp/include/lancommander/script/: batch_script_runner.h  script_runner.h
LANCommander.SDK.Cpp/src/archive/: crc32_util.cpp
LANCommander.SDK.Cpp/src/clients/: authentication_client.cpp  beacon_client.cpp  connection_client.cpp  depot_client.cpp  game_client.cpp  issue_client.cpp  key_client.cpp  launcher_client.cpp  library_client.cpp  media_client.cpp  play_session_client.cpp  profile_client.cpp  redistributable_client.cpp  save_client.cpp  script_client.cpp  tool_client.cpp
LANCommander.SDK.Cpp/src/json/: json_helpers.cpp  json_helpers.h
LANCommander.SDK.Cpp/src/script/: batch_script_runner.cpp
(+3714 files in other folders)
